--- a/src/components/Kennel.css
+++ b/src/components/Kennel.css
@@ -10,6 +10,7 @@ textarea {
   font-family: "Comfortaa", Arial, sans-serif;
   font-size: 14px;
   line-height: 1.5;
+  text-align: center;
 }
 
 h1,
